--- a/src/layout/footer/news-letter-form/newsLetter.module.scss
+++ b/src/layout/footer/news-letter-form/newsLetter.module.scss
@@ -34,6 +34,7 @@
     }
     width: 100%;
     background-color: #fff;
+    outline: no;
     height: 48px;
     border: 1px solid #e9f3f5;
     border-radius: 8px;
