Feat:(FRO-36, FRO-96, FRO-94, FRO-80): work on all these linear tickets solved About-us page, contact-us form validation

--- a/src/components/about/hero/aboutHero.module.scss
+++ b/src/components/about/hero/aboutHero.module.scss
@@ -1,6 +1,12 @@
 @import "../../../scss/mixins";
 @import "../../../scss/variables";
 
+  /*
+.aboutus{
+background:rgba(113,77,217,0.1);
+}
+ */ 
+ 
 .header {
   @include container;
   display: flex;
@@ -60,6 +66,7 @@
   flex-direction: column-reverse;
   justify-content: space-between;
   align-items: center;
+  margin-top: 8rem;
   height: 100vh;
   margin-bottom: 5rem;
   .text{ 
@@ -69,4 +76,5 @@
  }
  }
    }
+   
  }
