--- a/src/components/contact/contactForm/ContactForm.module.scss
+++ b/src/components/contact/contactForm/ContactForm.module.scss
@@ -1,15 +1,19 @@
+
 @import "../../../scss//mixins";
 @import "../../../scss/variables";
 
-.page {
+.page{
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  max-width: 80vw;
-  margin: 0 auto;
+  margin:1rem 2rem;
   // padding: 0 2rem;
   font-size: 0.875rem;
   font-family: "Open Sans", sans-serif;
   cursor: default;
   --primary: #714dd9;
+  background-color: #fff;
+  padding: 1rem 2rem;
 }
 
 .mainHeading {
@@ -20,37 +24,32 @@
 }
 
 .firstPara {
-  font-weight: 700;
+  font-weight: 400;
   margin-bottom: 0.5rem;
-}
-
-.emphasis {
-  font-weight: 600;
+  font-size: 1rem;
+  color: #707070;
 }
 
 .top {
   margin-bottom: 2rem;
   color: #333333;
-
-  span {
-    color: $activeColor;
-  }
 }
 
-.inputRow {
+.formContainer{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  width: 30rem;
 }
 
-label:has(input:not([type="checkbox"], [type="radio"]), textarea) {
+.contactFormLabel{
   font-size: 0.6875rem;
   color: #707070;
   font-weight: 700;
   display: block;
 }
 
-input:not([type="checkbox"], [type="radio"]),
-textarea {
+.contactFormInput{
   margin-top: 0.5rem;
   font-family: inherit;
   margin-bottom: 1rem;
@@ -62,60 +61,24 @@ textarea {
   resize: none;
 }
 
-.outline:focus {
+.contactFormInput:focus {
   @include hover;
-  outline: #714dd9;
 }
-
-.outline1,
-.outline1:focus {
-  @include hover // border: 1px solid #707070;
-;
-}
-
-textarea {
-  height: 100px;
-}
-
-.subHeading {
-  margin-top: 2rem;
-  line-height: 160%;
-  font-size: 1.125rem;
+.contactFormTextarea{
+  height: 150px;
+  margin-top: 0.5rem;
+  font-family: inherit;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  display: block;
+  border-radius: 0.5rem;
+  border: 1px solid lightgray;
+  width: 100%;
+  resize: none;
 }
 
 .bottom {
   color: #060c22;
-}
-
-.radioCollection {
-  width: max-content;
-  margin-top: 1.21875rem;
-  margin-bottom: 2.1875rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1.4375rem;
-}
-
-.radioCollection > label {
-  display: flex;
-}
-
-.checkboxRoot {
-  color: var(--primary);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0.4rem;
-  background-color: transparent;
-  border: 1.5px solid var(--primary);
-  height: 20px;
-  width: 20px;
-  margin-right: 1.125rem;
-}
-
-.checkboxRoot svg {
-  height: 1rem;
-  width: 1rem;
 }
 
 button[type="submit"] {
@@ -125,51 +88,76 @@ button[type="submit"] {
   color: $white;
 }
 
-@media screen and (min-width: 768px) {
-  .page {
-    // padding: 0 7.5rem;
-  }
-  .mainHeading {
-    font-size: 3.8125rem;
-  }
-  .firstPara {
-    font-size: 1.5625rem;
-  }
-  .top {
-    font-size: 1rem;
-  }
-  // .inputRow {
-  //   display: grid;
-  //   grid-template-columns: repeat(2, 1fr);
-  //   grid-gap: 10px;
-  // }
+.report{
+  border: 1px solid #181818;
+  color: white;
+  padding: 10px 10px;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
 
-  // .span-col-2 {
-  //   grid-column: span 2 / auto;
-  // }
+@media (max-width: 768px) {
+  .page{
+  display: flex;
+  flex-direction: column;
+  width: 25rem;
+  margin:1rem 2rem;
+  // padding: 0 2rem;
+  font-size: 0.875rem;
+  font-family: "Open Sans", sans-serif;
+  cursor: default;
+  --primary: #714dd9;
+  height: 100vh;
+  align-items: center;
+}
+  .formContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 23rem;
+  height: 100%;
+}
 
-  .inputRow {
-    flex-direction: row;
-    gap: 1rem;
-  }
-  .inputRow > * {
-    flex: 1;
-  }
-  textarea {
-    height: 231px;
-  }
-  .subHeading {
-    font-size: 1.5625rem;
-  }
-  .radioCollection {
-    font-size: 1rem;
-  }
-  .checkboxRoot {
-    width: 33.33px;
-    height: 33.33px;
-  }
-  .checkboxRoot svg {
-    height: 2rem;
-    width: 2rem;
-  }
+.contactFormInput{
+  margin-top: 0.5rem;
+  font-family: inherit;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  display: block;
+  border-radius: 0.5rem;
+  border: 1px solid lightgray;
+  width: 23rem;
+  resize: none;
+}
+
+.contactFormTextarea{
+  height: 150px;
+  margin-top: 0.5rem;
+  font-family: inherit;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  display: block;
+  border-radius: 0.5rem;
+  border: 1px solid lightgray;
+  width: 23rem;
+  resize: none;
+}
+
+.mainHeading {
+  font-size: 2.3125rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  color: $black;
+  text-align: center;
+}
+
+.firstPara {
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  color: #707070;
+  text-align: center;
+}
+
 }
