Feat:FRO-92/ Implement new VA Dashboard and its functionalities. Add endpoint and make a succesful request to the endpoint

--- a/src/components/AssistantVA/VAHome/Home.module.scss
+++ b/src/components/AssistantVA/VAHome/Home.module.scss
@@ -32,6 +32,8 @@
     background: #F9F7FF;
     padding: 1.5rem;
     transition: all 0.3s ease-in-out;
+    height: 80vh;
+    overflow-y: scroll;
 }
 
 .va_home_container_active {
