--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -91,7 +91,7 @@
                     }
 
             }
-            input{
+            .phoneInputField{
                 border: none;
                 padding: 0;
                 outline: none;
