--- a/src/layout/footer/news-letter-form/newsLetter.module.scss
+++ b/src/layout/footer/news-letter-form/newsLetter.module.scss
@@ -17,7 +17,7 @@
 
     .label {
       @media screen and (max-width: 486px)  {
-       margin-left: -14px;
+       margin-left: -3px;
       }
       text-align: left !important;
       font-size: 12px;
@@ -34,7 +34,6 @@
     }
     width: 100%;
     background-color: #fff;
-    outline: no;
     height: 48px;
     border: 1px solid #e9f3f5;
     border-radius: 8px;
@@ -48,7 +47,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px; 
+    gap: 15px; 
     }
     
     display: flex;
@@ -58,7 +57,7 @@
     gap: 16px;
   }
   
-  .subscribe_btn {
+  .subscribe_button {
     @media screen and (max-width: 486px) {
     font-size: 14px;
     background: #714DD9;
@@ -68,7 +67,7 @@
     height: 48px;
     border: none;
     color: #FAFAFA;
-    
+    margin-bottom: 2rem;
     }
     
     font-weight: 600;
@@ -81,7 +80,7 @@
     height: 48px;
     border: none;
     color: #FAFAFA;
-    margin-top: -1px;
+    margin-top: -15px;
   }
   
 }
