feat(FRO-76): implemented landing page changes

--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -2,7 +2,7 @@
 @import "../../scss/variables";
 
 .slide {
-  margin: 6.6rem 0;
+  margin: 3rem 0 0;
   .imgWrapper {
     border: 1px solid red;
     width: fit-content;
