--- a/src/components/landing-page/feature/feature.module.scss
+++ b/src/components/landing-page/feature/feature.module.scss
@@ -3,12 +3,9 @@
 
 .feature {
   background: rgba(249, 247, 255, 1);
-  padding-bottom: 10rem;
-
-  .container {
-    // @include container;
-    max-width: 80vw;
-    margin: 0 auto;
+  padding-top: 5rem;
+  @media (min-width: 992px) {
+    padding: 10rem 0;
   }
 
   h2 {
@@ -17,14 +14,13 @@
     @include header-font;
   }
   .featureGrid {
-    padding: 0 1rem;
+    @include container-md;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     row-gap: 1.688rem;
 
     @media (min-width: 992px) {
       padding: initial;
-      max-width: 1007px;
       margin: 0 auto;
       column-gap: 1.688rem;
       grid-template-columns: repeat(2, 1fr);
