--- a/src/components/landing-page/happy-client/happyClient.module.scss
+++ b/src/components/landing-page/happy-client/happyClient.module.scss
@@ -1,28 +1,12 @@
 @import "../../../scss/variables";
-
-// ===================
-// MIXINS
-// ===================
-@mixin img_fluid {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-// ====================
-// END OF MIXINS
-// ====================
-
-// using the BEM system
-.container {
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 1.25rem;
-  // background-color: #fff;
-}
+@import "../../../scss/mixins";
 
 p {
   color: $blackText;
+}
+
+.container {
+  @include container-md;
 }
 
 .slider {
@@ -46,7 +30,7 @@ p {
     font-weight: 700;
     line-height: 160%;
     margin-bottom: 1rem;
-    font-size: 24px;
+    font-size: 34px;
     @media screen and (min-width: 992px) {
       font-size: 48px;
     }
