--- a/src/components/landing-page/hero-section/heroStyle.module.scss
+++ b/src/components/landing-page/hero-section/heroStyle.module.scss
@@ -12,33 +12,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100vw;
-  //   background: url("https://res.cloudinary.com/kingsleysolomon/image/upload/v1669367204/hng/todoAppVirtualAssistant/Ellipse_2_jtpts7.png")
-  //     center right no-repeat;
   background-size: 40%;
   margin-bottom: 3rem;
+  gap: 2rem;
+  @include container;
   @media (min-width: 992px) {
     // background: url("https://res.cloudinary.com/kingsleysolomon/image/upload/v1669367204/hng/todoAppVirtualAssistant/Ellipse_2_jtpts7.png")
     //   center right no-repeat;
     flex-direction: row;
-    // border: 1px solid red;  
-    max-width: 80vw;
     margin: 0 auto;
   }
+
   .container {
-    // @include container;
-    max-width: 40vw;
-   
+    flex: 1;
   }
+
   .header {
     text-align: center;
     margin-bottom: 3rem;
     @media screen and (min-width: 992px) {
       text-align: left;
-      //   padding: 0 5rem;
     }
     h3 {
-      font-size: 24px;
+      font-size: 34px;
       margin: 1rem 0;
       @media screen and (min-width: 992px) {
         font-size: 48px;
