--- a/src/components/landing-page/section-two/SectionTwo.module.scss
+++ b/src/components/landing-page/section-two/SectionTwo.module.scss
@@ -7,63 +7,19 @@
   width: 9rem;
   height: 9rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .section__two {
-  background: rgba(249, 247, 255, 1);
   text-align: center;
-  padding: 7.5rem 0;
-
-  .float_icon_1,
-  .float_icon_3 {
-    width: fit-content;
-    margin: auto;
-    display: none;
-
-    @media (min-width: 992px) {
-      display: block;
-    }
-
-    p {
-      font-size: 1.125rem;
-      font-weight: 700;
-      margin-top: 1rem;
-    }
-  }
-
-  .float_icon_1 {
-    margin-top: 5em;
-    transform: translateX(5rem) scale(0.5);
-    p {
-      color: rgb(82, 196, 26);
-    }
-    @media (min-width: 992px) {
-      transform: translateX(5rem) scale(1);
-    }
-  }
-  .float_icon_3 {
-    margin-bottom: 5em;
-    transform: translateX(10rem) scale(0.5);
-    p {
-      color: rgb(170, 50, 52);
-    }
-    @media (min-width: 992px) {
-      transform: translateX(10rem) scale(1);
-    }
-  }
 
   header {
-    width: 100%;
-    max-width: 31.5rem;
-    margin: 0 auto;
-
+    @include container-md;
     .section__two_title {
       font-weight: 700;
       line-height: 160%;
-      font-size: 24px;
+      font-size: 34px;
       margin-bottom: 1rem;
 
       @media screen and (min-width: 992px) {
@@ -75,27 +31,49 @@
       }
     }
     .section__two_subtitle {
-      font-size: 1.13rem;
+      font-size: 16px;
       line-height: 180%;
+      @media (min-width: 992px) {
+        font-size: 20px;
+        padding: 0 2rem;
+      }
     }
   }
 
   .taskDisplay {
-    @include container;
-    margin-top: 39px;
-    display: flex;
-    flex-direction: column;
-    @media (min-width: 992px) {
-      flex-direction: row;
-    }
-    .client,
-    .assistant {
-      flex: 1;
+    @include container-md;
+    margin-top: 3rem;
+    position: relative;
+    .float_icon_1,
+    .float_icon_2 {
+      position: absolute;
+      background-color: $white;
     }
 
+    .float_icon_1 {
+      left: -5%;
+      bottom: -10%;
+      transform: scale(0.4);
+      @media (min-width: 992px) {
+        transform: scale(1);
+        left: 7%;
+        bottom: 15%;
+      }
+    }
+
+    .float_icon_2 {
+      right: 0;
+      top: -5%;
+      transform: scale(0.4);
+      @media (min-width: 992px) {
+        transform: scale(1);
+        right: 10%;
+        top: -5%;
+      }
+    }
     .assistant {
       @media (min-width: 992px) {
-        margin-top: -10rem;
+        // margin-top: -10rem;
       }
     }
   }
