--- a/src/components/landing-page/virtualAssistant/virtualAssistant.module.scss
+++ b/src/components/landing-page/virtualAssistant/virtualAssistant.module.scss
@@ -2,17 +2,17 @@
 @import "../../../scss//mixins";
 
 .vr {
-  // @include container-fluid;
-  width: 80vw;
-  margin: 0 auto;
   position: relative;
+  // border: 1px solid red;
+  height: 45rem;
+  overflow: hidden;
+
   &_header {
-    max-width: 900px;
-    margin: 50px auto;
+    @include container-md;
     text-align: center;
 
     h3 {
-      font-size: 24px;
+      font-size: 34px;
       margin: 1rem 0;
       @media screen and (min-width: 992px) {
         font-size: 48px;
