--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -67,6 +67,11 @@
 	color: #707070;
 }
 
+.login__googleButton{
+	background-color: transparent;
+	border: none;
+}
+
 .login__passwordWrapper {
 	display: flex;
 	align-items: center;
