--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -9,58 +9,51 @@
         padding-bottom: 3.625rem;
     }
 
-
-        @media screen and (max-width: 600px) {
-            display: none;
-        }
+    .signup__bottomContent {
+        display: grid;
+        gap: 1rem;
+        margin-top: 3rem;
+    }
+    
+    .signup__others {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1rem;
+    }
+    
+    .signup__continueText {
+        width: 100%;
+        text-align: center;
+        color: #707070;
+        font-size: 1rem;
+    }
+    
+    .signup__line {
+        height: 2px;
+        display: block;
+        width: 100%;
+        background-color: #D3D0D9;
+    }
+    
+    .signup__socials {
+        display: flex;
+        gap: 2rem;
+        justify-content: center;
+        margin-top: 1rem;
+    }
+    
+    .signup__socials img {
+        cursor: pointer;
+    }
+    
+    .signup__googleButton{
+        background-color: transparent;
+        border: none;
     }
 
-    
-.signup__bottomContent {
-	display: grid;
-	gap: 1rem;
-	margin-top: 3rem;
-}
 
-.signup__others {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	gap: 1rem;
-}
-
-.signup__continueText {
-	width: 100%;
-	text-align: center;
-	color: #707070;
-	font-size: 1rem;
-}
-
-.signup__line {
-	height: 2px;
-	display: block;
-	width: 100%;
-	background-color: #D3D0D9;
-}
-
-.signup__socials {
-	display: flex;
-	gap: 2rem;
-	justify-content: center;
-	margin-top: 1rem;
-}
-
-.signup__socials img {
-	cursor: pointer;
-}
-
-.signup__googleButton{
-	background-color: transparent;
-	border: none;
-}
-
-
-    .signupRight{
+    .signupLeft{
         width: 29rem;
         margin-top: 2.5rem;
         margin-left: 4rem;
@@ -278,3 +271,4 @@
             display: none;
         }
     }
+}
