--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -1,4 +1,4 @@
-.signupContainer{
+.signupContainer {
     display: flex;
     justify-content: space-between;
     padding-bottom: 2rem;
@@ -9,51 +9,144 @@
         padding-bottom: 3.625rem;
     }
 
+    .Formm {
+        display: flex;
+        flex-direction: column;
+        row-gap: 23px;
+
+        .eachContainer {
+            display: flex;
+            flex-direction: column;
+
+            .describer {
+                margin-bottom: 8px;
+                font-size: 16px;
+                font-weight: 600;
+                color: #707070;
+            }
+
+            .inpuT {
+                width: 100%;
+                padding: 15px 16px;
+                border: 1px solid #D3D0D9;
+                border-radius: 8px;
+                outline: none;
+
+                &:focus {
+                    border: 1px solid #714DD9;
+                }
+            }
+
+            .Err {
+                width: 100%;
+                padding: 15px 16px;
+                border: 1px solid #FF4D4F;
+                border-radius: 8px;
+                outline: none;
+            }
+
+            .phone {
+                background-color: #fff;
+                border-radius: 0.5rem;
+                border: 1px solid #D3D0D9;
+                padding: 15px 16px;
+                margin-top: 0;
+
+                input {
+                    border: none;
+                    outline: none;
+                }
+            }
+
+            .passwordInputWrapper {
+                position: relative;
+
+                .passwordInput {
+                    padding: 0.938rem 1rem;
+                    height: 3rem;
+                    background: #FFFFFF;
+                    border: 1px solid #E9F3F5;
+                    border-radius: 0.5rem;
+
+                    &:focus {
+                        outline: none;
+                        border: 1px solid #714DD9;
+                    }
+                }
+
+                .hideEye {
+                    position: absolute;
+                    cursor: pointer;
+                    right: 1rem;
+                    bottom: 2.1rem;
+                    font-size: 1.5rem;
+                    display: none;
+                }
+
+                .showEye {
+                    position: absolute;
+                    cursor: pointer;
+                    right: 1rem;
+                    bottom: 2.1rem;
+                    font-size: 1.5rem;
+                    display: flex;
+                }
+            }
+
+            small {
+                color: #FF4D4F;
+                font-size: 14px;
+                margin-top: 5px;
+                font-weight: 400;
+            }
+        }
+    }
+
     .signup__bottomContent {
         display: grid;
         gap: 1rem;
         margin-top: 3rem;
     }
-    
+
     .signup__others {
         display: flex;
         align-items: center;
         justify-content: space-between;
         gap: 1rem;
     }
-    
+
     .signup__continueText {
         width: 100%;
         text-align: center;
         color: #707070;
         font-size: 1rem;
     }
-    
+
     .signup__line {
         height: 2px;
         display: block;
         width: 100%;
         background-color: #D3D0D9;
     }
-    
+
     .signup__socials {
         display: flex;
         gap: 2rem;
         justify-content: center;
         margin-top: 1rem;
     }
-    
+
     .signup__socials img {
         cursor: pointer;
     }
-    
-    .signup__googleButton{
+
+    .signup__googleButton {
         background-color: transparent;
         border: none;
     }
 
 
-    .signupLeft{
+    .signupLeft {
         width: 29rem;
         margin-top: 2.5rem;
         margin-left: 4rem;
@@ -62,9 +155,9 @@
             margin-left: 1.25rem;
             margin-right: 1.25rem;
         }
-    
 
-        .createAccountText{
+
+        .createAccountText {
             margin-bottom: 2.5rem;
             text-align: center;
             font-style: normal;
@@ -74,7 +167,118 @@
             color: #333333;
 
         }
-        .eachContainer{
+
+
+        .permission {
+            margin-top: 1rem;
+
+            .permissionText {
+                margin-left: 0.5rem;
+                font-weight: 400;
+                font-size: 1rem;
+                line-height: 120%;
+                text-decoration: none;
+            }
+
+
+        }
+
+        .button {
+            background: #714DD9;
+            border-radius: 0.5rem;
+            width: 100%;
+            padding: 0.875rem;
+            color: white;
+            font-weight: 700;
+            font-size: 1rem;
+            line-height: 1.25rem;
+            cursor: pointer;
+            margin-top: 5rem;
+            border: none;
+
+            &:focus {
+                box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
+            }
+
+        }
+
+        .buttonDisabled {
+            width: 100%;
+            padding: 0.875rem;
+            background: #D3D0D9;
+            border-radius: 0.5rem;
+            color: white;
+            font-weight: 700;
+            font-size: 1rem;
+            line-height: 1.25rem;
+            margin-top: 5rem;
+            border: none;
+        }
+
+        .buttonEnabled {
+            width: 100%;
+            padding: 0.875rem;
+            background-color: #714DD9;
+            border-radius: 0.5rem;
+            color: white;
+            font-weight: 700;
+            font-size: 1rem;
+            line-height: 1.25rem;
+            margin-top: 5rem;
+            border: none;
+        }
+
+        .tosignup {
+            margin-top: 1.719rem;
+            color: #707070;
+            text-align: center;
+        }
+
+        .continueWith {
+            display: flex;
+            align-items: center;
+            margin-top: 2rem;
+
+            .continueWithLine {
+                height: 2px;
+                display: block;
+                width: 33%;
+                background-color: #D3D0D9;
+            }
+
+            .continueWithText {
+                color: #707070;
+                margin-right: 0.7rem;
+                margin-left: 0.7rem;
+            }
+        }
+
+        .signupSocials {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 1rem;
+            gap: 2rem;
+        }
+    }
+
+    .signupImg {
+        height: inherit;
+
+        img {
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @media screen and (max-width: 600px) {
+            display: none;
+        }
+    }
+}
+
+
+/*
+  .eachContainer{
             display: flex;
             flex-direction: column;
             
@@ -180,95 +384,4 @@
             }
 
         }
-
-        .permission{
-            margin-top: 1rem;
-
-            .permissionText{
-                margin-left: 0.5rem;
-                font-weight: 400;
-                font-size: 1rem;
-                line-height: 120%;
-                text-decoration: none;
-            }
-
-    
-        }
-
-        .button{
-            background: #714DD9;
-            border-radius: 0.5rem;
-            width: 100%;
-            padding: 0.875rem;
-            color: white;
-            font-weight: 700;
-            font-size: 1rem;
-            line-height: 1.25rem;
-            cursor: pointer;
-            margin-top: 5rem;
-            border: none;
-
-            &:focus{
-                box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05), 0px 0px 0px 4px #D1E9FF;
-            }
-
-        }
-
-        .buttonDisabled{
-            width: 100%;
-            padding: 0.875rem;
-            background: #D3D0D9;
-            border-radius: 0.5rem;
-            color: white;
-            font-weight: 700;
-            font-size: 1rem;
-            line-height: 1.25rem;
-            margin-top: 5rem;
-            border: none;
-        }
-
-        .tosignup{
-            margin-top: 1.719rem;
-            color: #707070;
-            text-align: center;
-        }
-
-        .continueWith{
-            display: flex;
-            align-items: center;
-            margin-top: 2rem;
-            .continueWithLine{
-                height: 2px;
-                display: block;
-                width: 33%;
-                background-color: #D3D0D9;
-            }
-            .continueWithText{
-                color: #707070;
-                margin-right: 0.7rem;
-                margin-left: 0.7rem;
-            }
-        }
-
-        .signupSocials{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 1rem;
-            gap: 2rem;
-        }
-    }
-
-    .signupImg{
-        height: inherit;
-        
-        img{
-            height: 100%;
-            object-fit: cover;
-        }
-
-        @media screen and (max-width: 600px) {
-            display: none;
-        }
-    }
-}
+*/
