--- a/src/components/404/errorMain.scss
+++ b/src/components/404/errorMain.scss
@@ -53,6 +53,7 @@
   border: none;
   cursor: pointer;
   text-decoration: none;
+  transition: 0.3s ease;
 }
 
 @media screen and (max-width: 1024px) {
