--- a/src/components/NewHowItWorks/HowSections.module.scss
+++ b/src/components/NewHowItWorks/HowSections.module.scss
@@ -1,12 +1,11 @@
-
- @media screen and (max-width: 768px) {
-   .how_container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-   } 
-} 
+@media screen and (max-width: 768px) {
+  .how_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 .header_container {
   display: flex;
@@ -16,22 +15,21 @@
   padding: auto;
   margin: auto;
   margin-bottom: 2rem;
-
 }
 
 .how_header {
   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 2.125rem;
-      color: #333333;
-      width: 15.25rem;
-      height: 3.375rem;
-      margin-top: 3rem;
-      margin-bottom: 1.5rem;
-}
-  
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.125rem;
+    color: #333333;
+    width: 15.25rem;
+    height: 3.375rem;
+    margin-top: 3rem;
+    margin-bottom: 1.5rem;
+  }
+
   font-family: Open Sans;
   font-style: normal;
   font-weight: 700;
@@ -42,17 +40,17 @@
 }
 
 .how_paragraph {
-    @media screen and (max-width: 768px) {
-        font-family: Open Sans;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.25rem;
-        color: #707070;
-        width: 11.625rem;
-        height: 2rem;
-        margin-bottom: 2rem;
-    }
-    
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.25rem;
+    color: #707070;
+    width: 11.625rem;
+    height: 2rem;
+    margin-bottom: 2rem;
+  }
+
   font-family: Open Sans;
   font-style: normal;
   font-weight: 400;
@@ -61,24 +59,23 @@
 }
 
 .orange {
-  color: #FDA758;
+  color: #fda758;
 }
-
 
 /*******************  STEPS 1      **********************/
 
 .step_container1 {
-   @media screen and (max-width: 768px) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 0rem;
-      width: 23.438rem;
-      height: 30.563rem;
-      margin-top: 10rem;
-      background: none;
-}
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0rem;
+    width: 23.438rem;
+    height: 30.563rem;
+    margin-top: 10rem;
+    background: none;
+  }
 
   display: flex;
   flex-direction: row;
@@ -86,9 +83,8 @@
   align-items: center;
   gap: 12.5rem;
   margin: auto;
-  background: #EFEBFB;
+  background: #efebfb;
 }
-
 
 .stepleft_container1 {
   display: flex;
@@ -97,26 +93,26 @@
 }
 
 .steps_header {
-   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 1rem;
-      color: #714DD9;
-      width: 3.063rem;
-      height: 1.25rem;
-      margin-bottom: 2rem;
-}
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1rem;
+    color: #714dd9;
+    width: 3.063rem;
+    height: 1.25rem;
+    margin-bottom: 2rem;
+  }
 
   font-family: Open Sans;
   font-style: normal;
   font-weight: 700;
   font-size: 1.563rem;
-  color: #714DD9;
+  color: #714dd9;
 }
 
 .steps_paragraph1 {
-   @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     font-family: Open Sans;
     font-style: normal;
     font-weight: 700;
@@ -124,7 +120,7 @@
     color: #333333;
     width: 20.938rem;
     height: 2.375rem;
-}
+  }
 
   font-family: Open Sans;
   font-style: normal;
@@ -134,16 +130,16 @@
 }
 
 .steps_paragraph2 {
-   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1rem;
-      color: #707070;
-      width: 20.938rem;
-      height: 5.438rem;
-      line-height: 1.813rem;
-}
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #707070;
+    width: 20.938rem;
+    height: 5.438rem;
+    line-height: 1.813rem;
+  }
 
   font-family: Open Sans;
   font-style: normal;
@@ -156,7 +152,7 @@
 }
 
 .steps_image1 {
-   @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     width: 20.5rem;
     height: 20.875rem;
     display: flex;
@@ -164,24 +160,22 @@
     align-items: center;
     margin: auto;
     margin-bottom: 10rem;
-}
+  }
   width: 32.5rem;
   height: 43.75rem;
 }
 
-
-
 /*******************  STEPS 2      **********************/
 
 .step_container2 {
-   @media screen and (max-width: 768px) {
-      display: flex;
-      flex-direction: column-reverse;
-      justify-content: center;
-      align-items: center;
-      gap: 0rem;
-      background: none;
-}
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    gap: 0rem;
+    background: none;
+  }
 
   display: flex;
   flex-direction: row;
@@ -191,7 +185,6 @@
   margin: auto;
 }
 
-
 .stepleft_container2 {
   display: flex;
   flex-direction: column;
@@ -199,25 +192,25 @@
 }
 
 .steps_header {
-   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 1rem;
-      color: #714DD9;
-      width: 3.063rem;
-      height: 1.25rem;
-}
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1rem;
+    color: #714dd9;
+    width: 3.063rem;
+    height: 1.25rem;
+  }
 
   font-family: Open Sans;
   font-style: normal;
   font-weight: 700;
   font-size: 1.563rem;
-  color: #714DD9;
+  color: #714dd9;
 }
 
 .steps_paragraph12 {
-   @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     font-family: Open Sans;
     font-style: normal;
     font-weight: 700;
@@ -225,7 +218,7 @@
     color: #333333;
     width: 20.938rem;
     height: 4.75rem;
-}
+  }
 
   font-family: Open Sans;
   font-style: normal;
@@ -235,16 +228,16 @@
 }
 
 .steps_paragraph22 {
-   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1rem;
-      color: #707070;
-      width: 20.938rem;
-      height: 5.438rem;
-      line-height: 1.813rem;
-}
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #707070;
+    width: 20.938rem;
+    height: 5.438rem;
+    line-height: 1.813rem;
+  }
 
   font-family: Open Sans;
   font-style: normal;
@@ -257,34 +250,30 @@
 }
 
 .steps_image2 {
-   @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     width: 20.5rem;
     height: 25.875rem;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
-}
+  }
   width: 32.5rem;
   height: 43.75rem;
 }
 
-
-
-
-
 /*******************  STEPS 3      **********************/
 
 .step_container3 {
-   @media screen and (max-width: 768px) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      gap: 0rem;
-      margin-top: 5rem;
-      background: none;
-}
+  @media screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0rem;
+    margin-top: 5rem;
+    background: none;
+  }
 
   display: flex;
   flex-direction: row;
@@ -292,9 +281,8 @@
   align-items: center;
   gap: 12.5rem;
   margin: auto;
-  background: #EFEBFB;
+  background: #efebfb;
 }
-
 
 .stepleft_container3 {
   display: flex;
@@ -303,25 +291,25 @@
 }
 
 .steps_header {
-   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 1rem;
-      color: #714DD9;
-      width: 3.063rem;
-      height: 1.25rem;
-}
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1rem;
+    color: #714dd9;
+    width: 3.063rem;
+    height: 1.25rem;
+  }
 
   font-family: Open Sans;
   font-style: normal;
   font-weight: 700;
   font-size: 1.563rem;
-  color: #714DD9;
+  color: #714dd9;
 }
 
 .steps_paragraph13 {
-   @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     font-family: Open Sans;
     font-style: normal;
     font-weight: 700;
@@ -329,7 +317,7 @@
     color: #333333;
     width: 20.938rem;
     height: 2.375rem;
-}
+  }
 
   font-family: Open Sans;
   font-style: normal;
@@ -339,16 +327,16 @@
 }
 
 .steps_paragraph23 {
-   @media screen and (max-width: 768px) {
-      font-family: Open Sans;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 1rem;
-      color: #707070;
-      width: 20.938rem;
-      height: 5.438rem;
-      line-height: 1.813rem;
-}
+  @media screen and (max-width: 768px) {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #707070;
+    width: 20.938rem;
+    height: 5.438rem;
+    line-height: 1.813rem;
+  }
 
   font-family: Open Sans;
   font-style: normal;
@@ -361,29 +349,28 @@
 }
 
 .steps_image3 {
-   @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     width: 20.5rem;
     height: 25.875rem;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: auto;
-}
+  }
   width: 32.5rem;
   height: 43.75rem;
 }
 
-
 /*******************  LAST    **********************/
 
 .last_container {
-      @media screen and (max-width: 768px) {
-       width: 23.438rem;
-       height: 30.563rem;
-       margin: auto;
-       background: rgba(255, 255, 255, 0.82);
-       backdrop-filter: blur(6.125rem);
-}
+  @media screen and (max-width: 768px) {
+    width: 23.438rem;
+    height: 30.563rem;
+    margin: auto;
+    background: rgba(255, 255, 255, 0.82);
+    backdrop-filter: blur(6.125rem);
+  }
 
   display: flex;
   flex-direction: column;
@@ -395,17 +382,17 @@
 }
 
 .last_header {
-   @media screen and (max-width: 768px) {
-      width: 20.938rem;
-      height: 13.5rem;
-      font-family: 'Open Sans';
-      font-style: normal;
-      font-weight: 700;
-      font-size: 2.125rem;
-      line-height: 3.375rem;
-      text-align: center;
-      color: #333333;
-    }
+  @media screen and (max-width: 768px) {
+    width: 20.938rem;
+    height: 13.5rem;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 2.125rem;
+    line-height: 3.375rem;
+    text-align: center;
+    color: #333333;
+  }
   font-family: Open Sans;
   font-style: normal;
   font-weight: 700;
@@ -418,7 +405,7 @@
 }
 
 .last_button {
-  background: #714DD9;
+  background: #714dd9;
   border-radius: 0.5rem;
   border: none;
   width: 11.5rem;
@@ -428,20 +415,10 @@
   font-style: normal;
   font-weight: 600;
   font-size: 0.875rem;
-  color: #FAFAFA;
+  color: #fafafa;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
+  cursor: pointer;
 }
-              
-
-
-
-
-
-
-
-
-
-
