--- a/src/layout/header/navbar.module.scss
+++ b/src/layout/header/navbar.module.scss
@@ -63,6 +63,10 @@
   border: 1px solid red;
   background: transparent;
   color: red;
+  transition: 0.3s ease;
+  &:hover {
+    box-shadow: 0px 0px 0px 4px #ff000050;
+  }
 }
 
 .sidebar {
