--- a/src/components/about/section-two/aboutSectiontwo.module.scss
+++ b/src/components/about/section-two/aboutSectiontwo.module.scss
@@ -3,10 +3,22 @@
 
 .about {
   // @include container;
+  max-width: 100vw;
+  margin: 0 auto;
+  text-align: center;
+  h2 {
+    @include header-font;
+  }
+}
+
+    @media (max-width: 768px) {
+.about {
+  // @include container;
   max-width: 80vw;
   margin: 0 auto;
   text-align: center;
   h2 {
     @include header-font;
   }
+}
 }
