--- a/src/components/about/hero/aboutHero.module.scss
+++ b/src/components/about/hero/aboutHero.module.scss
@@ -22,6 +22,7 @@ background:rgba(113,77,217,0.1);
   .text {
     text-align: center;
     flex: 1;
+    margin: 1rem 4rem;
     a {
       margin: 0 auto;
     }
@@ -29,6 +30,9 @@ background:rgba(113,77,217,0.1);
       text-align: left;
       a {
         margin: 0;
+      }
+      p{
+        width: 500px;
       }
     }
 
