--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -222,7 +222,7 @@
                         
                     }
 
-                    small {
+                    .error_state{
                         color: #FF4D4F;
                         font-size: 14px;
                         margin-top: 5px;
