feat: use react Toastify

--- a/src/components/dasboard/TaskItems.module.scss
+++ b/src/components/dasboard/TaskItems.module.scss
@@ -85,6 +85,7 @@
           background: #d3d0d9;
           border: 1px solid #d3d0d9;
           border-radius: 4px;
+          cursor: pointer;
         }
         .text {
           font-family: "Open Sans";
