--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -45,3 +45,11 @@ body {
 .shadow {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
+
+.Toastify__progress-bar--info {
+  background: #714dd9 !important;
+}
+
+.Toastify__progress-bar--success {
+  background: #52c41a !important;
+}
