Fix: FRO-46 / Add Dropdpwn

--- a/src/components/dasboard/Dropdown.module.scss
+++ b/src/components/dasboard/Dropdown.module.scss
@@ -16,13 +16,14 @@
     align-items: flex-start;
     padding: 1.5rem;
     position: fixed;
-    top: 64px;
+    top: 6.25rem;
     right: 40px;
     z-index: 1;
     width: 14.5rem;
     height: 12.625rem;
     background: #FFFFFF;
     border-radius: 8px;
+    border: 1px solid #D3D0D9;
 }
 
 .menubarcon1 {
