new one assigned by lotana

--- a/src/components/about/section-two/AboutUsHeader.module.scss
+++ b/src/components/about/section-two/AboutUsHeader.module.scss
@@ -12,7 +12,7 @@
     // gap: 10rem;
     
   }
-
+  
 .headerRow{
 display: flex;
 flex-direction: row;
@@ -20,6 +20,21 @@ flex-direction: row;
 align-items: center;
 gap: 0.5rem;
 }
+
+.headerCol{
+  display: flex;
+  flex-direction:  column;
+  border: 1px solid #fff;
+  border-radius:8px;
+  padding: 1rem 2rem;
+  margin-bottom: 1rem;
+}
+
+.headerCol:hover{
+border: 1px solid  #714DD9;
+border-radius:8px;
+}
+
 
 .headerRow h1{
   font-size: 1rem;
@@ -41,16 +56,18 @@ gap: 0.5rem;
     font-weight: 700;
   }
 
-  .tickedText {
+    .tickedText {
     line-height: 180%;
-    margin: 1.5rem 0;
-    margin-right: 0;
+    padding-top: 1rem;
+   // margin: 1.5rem 0;
+    //margin-right: 0;
     text-align: justify;
+    font-size: 1rem;
     @media (min-width: 992px) {
-      margin-right: 10rem;
+      //margin-right: 10rem;
     }
   }
-
+  
 @media (min-width:992px){
   .headerTickedBox {
     flex: 1;
