refactor: reset-password-workflow

--- a/src/components/ResetPasswordPages/CheckMail/CheckMail.module.scss
+++ b/src/components/ResetPasswordPages/CheckMail/CheckMail.module.scss
@@ -3,7 +3,8 @@
   border-radius: 6px;
   max-width: 598px;
   //   max-height: 520px;
-  margin: 140px auto;
+  // margin: 140px auto;
+  margin: auto;
   padding: 40px;
   text-align: center;
 
