Feat(FRO-81): functionalities on password recovery implemented

--- a/src/components/ResetPasswordPages/ResetPage/ResetPasswordPage.module.scss
+++ b/src/components/ResetPasswordPages/ResetPage/ResetPasswordPage.module.scss
@@ -116,3 +116,10 @@
     color: #da1e28;
   }
 }
+.toast_classname {
+  background: white;
+  border: 1px solid #ff4d4f;
+  color: #ff0004;
+  height: 15px;
+  border-radius: 8px;
+}
