--- a/src/components/ResetPasswordPages/otpPage/OTPPage.module.scss
+++ b/src/components/ResetPasswordPages/otpPage/OTPPage.module.scss
@@ -84,3 +84,13 @@
     }
   }
 }
+.toast_error {
+  color: red;
+  border: 1px solid red;
+  border-radius: 8px;
+}
+.toast_success {
+  color: green;
+  border: 1px solid green;
+  border-radius: 8px;
+}
