feat(FRO-51): added react-toast for failed and success creation of tasks, corrected va lables to focus on radio button on click, modified mode of closure of the modal

--- a/src/components/createTask/createTask.module.scss
+++ b/src/components/createTask/createTask.module.scss
@@ -56,11 +56,14 @@
       align-items: flex-start;
       margin-top: 1rem;
       .createTask_label {
+        @media screen and (max-width: 414px) {
+          font-size: 12px;
+        }
         color: #333333;
         font-family: "Open Sans";
         font-style: normal;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 15.2px;
         line-height: 100%;
       }
       .createTask_input {
@@ -93,11 +96,14 @@
         align-items: flex-start;
         margin-top: 1rem;
         .createTask_label {
+          @media screen and (max-width: 414px) {
+            font-size: 12px;
+          }
           color: #333333;
           font-family: "Open Sans";
           font-style: normal;
           font-weight: 700;
-          font-size: 12px;
+          font-size: 15.2px;
           line-height: 100%;
         }
         .createTask_input {
@@ -126,11 +132,14 @@
         align-items: flex-start;
         margin-top: 1rem;
         .createTask_label {
+          @media screen and (max-width: 414px) {
+            font-size: 12px;
+          }
           color: #333333;
           font-family: "Open Sans";
           font-style: normal;
           font-weight: 700;
-          font-size: 12px;
+          font-size: 15.2px;
           line-height: 100%;
         }
         .createTask_input {
@@ -156,10 +165,13 @@
     .createTask_va {
       margin-top: 1rem;
       .createTask_va_title {
+        @media screen and (max-width: 414px) {
+          font-size: 12px;
+        }
         font-family: "Open Sans";
         font-style: normal;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 15.2px;
         line-height: 100%;
         color: #333333;
       }
@@ -172,34 +184,34 @@
         .createTask_va_list1,
         .createTask_va_list2,
         .createTask_va_list3 {
-          //   input[type="radio"]:after {
-          //     width: 16px;
-          //     height: 16px;
-          //     border-radius: 15px;
-          //     top: -2px;
-          //     left: -1px;
-          //     position: relative;
-          //     background-color: white;
-          //     content: "";
-          //     display: inline-block;
-          //     visibility: visible;
-          //     border: 1px solid #d3d0d9;
-          //   }
+          input[type="radio"]:after {
+            width: 16px;
+            height: 16px;
+            border-radius: 15px;
+            top: -2px;
+            left: -1px;
+            position: relative;
+            background-color: white;
+            content: "";
+            display: inline-block;
+            visibility: visible;
+            border: 1px solid #d3d0d9;
+          }
 
-          //   input[type="radio"]:checked:after {
-          //     width: 16px;
-          //     height: 16px;
-          //     border-radius: 15px;
-          //     top: -2px;
-          //     left: -1px;
-          //     position: relative;
-          //     background-color: #714dd9;
-          //     content: "";
-          //     display: inline-block;
-          //     visibility: visible;
-          //     // border: 2px solid white;
-          //     border: 1px solid #d3d0d9;
-          //   }
+          input[type="radio"]:checked:after {
+            width: 16px;
+            height: 16px;
+            border-radius: 15px;
+            top: -2px;
+            left: -1px;
+            position: relative;
+            background-color: #714dd9;
+            content: "";
+            display: inline-block;
+            visibility: visible;
+            // border: 2px solid white;
+            border: 1px solid #d3d0d9;
+          }
 
           display: flex;
           flex-direction: row;
