fix: signup form validation

--- a/src/core/auth/signup/Signup.module.scss
+++ b/src/core/auth/signup/Signup.module.scss
@@ -1,11 +1,11 @@
-.PhoneInputInput {
-  border: none;
+// .PhoneInputInput {
+//   border: none;
 
-  &:focus,
-  &:active {
-    border: none;
-  }
-}
+//   &:focus,
+//   &:active {
+//     border: none;
+//   }
+// }
 
 // .signupContainer {
 //   display: flex;
