--- a/src/components/AssistantVA/VAHome/Home.module.scss
+++ b/src/components/AssistantVA/VAHome/Home.module.scss
@@ -5,7 +5,8 @@
 .task_details_container,
 .taskDetail_title_con,
 .task_details,
-.client {
+.client,
+.va_home_header {
     display: flex;
     flex-flow: row nowrap;
     gap: 10px;
@@ -17,7 +18,6 @@
 }
 
 .va_home_container,
-.va_home_header,
 .va_tasks,
 .task_container,
 .taskDetail_body_con,
@@ -52,7 +52,9 @@
     border-style: solid;
     border-color: #E9F3F5;
     border-radius: 8px 8px 8px 9px;
-    padding: 2rem 2rem 0 2rem;
+    padding: 0.5rem 2rem 0.5rem 2rem;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .va_home_links {
